fixed overflow on background image

--- a/src/app/components/title/title.component.scss
+++ b/src/app/components/title/title.component.scss
@@ -4,7 +4,7 @@
 .background-image {
     position: absolute;
     height: 100dvh;
-    width: 100dvw;
+    width: 100vw;
     top: 0;
     left: 0;
     z-index: 2;
